fix: z-index header

--- a/src/components/common/Header/Header.module.css
+++ b/src/components/common/Header/Header.module.css
@@ -10,6 +10,7 @@
   top: 0;
   left: 0;
   background-color: var(--bg-color);
+  z-index: 999;
 }
 
 .headerLogo {
